.config/waybar/style.css
@import "./rose-pine-colors.css";

* {
  font-family: Jetbrains Mono Nerd Font;
  font-weight: bold;
  font-size: 15px;
  min-height: 30px;
}

window#waybar {
  color: @text;
  background: @base;
}

.modules-right {
  margin-right: 13px;
}

.modules-left {
  margin-left: 10px;
}

tooltip {
  background: @overlay;
  font-size: 16px;
  border-radius: 0px;
  border-width: 2px;
  border-style: solid;
  border-color: @highlightHigh;
}

#workspaces button {
  color: @muted;
  padding-left: 0.6em;
}

#workspaces button.current_output {
  color: @iris;
}

#workspaces button.focused {
  color: @foam;
}

#workspaces button.urgent {
  color: @love;
}

#workspaces button:hover {
  background: @highlightMed;
}

#scratchpad {
  padding-left: 0.6em;
  padding-right: 0.6em;
}

#scratchpad.empty {
  color: @muted;
}

#tray,
#network,
#bluetooth,
#pulseaudio,
#clock {
  padding-right: 0.6em;
  padding-left: 0.6em;
}

#network {
  color: @gold;
}

#bluetooth {
  color: @iris;
}

#pulseaudio {
  color: @foam;
}

#clock {
  color: @rose;
  padding-right: 0em;
}

#custom-spacer {
  color: @muted;
  padding-left: 0.3em;
  padding-right: 0.3em;
}

